Fix alignment of filters.

--- a/site/css/books.css
+++ b/site/css/books.css
@@ -3,6 +3,7 @@
   grid-template-columns: auto 1fr;
   gap: 1em;
   margin: 1em 0;
+  padding: 0 0.5em;
 }
 
 #books-filters .radios {
